dev:change: Added links to widget and made fully functional

--- a/libs/jade/dev/site/resolver.jade
+++ b/libs/jade/dev/site/resolver.jade
@@ -37,18 +37,18 @@ block content
 		p You should try to sort the issue out with your supplier - you might be able to avoid having to make a complaint.
 		p If you haven&rsquo;t already, you may also want to read our guidance if:
 		ul
-			li your energy bill seems too high or low
-			li your supplier has raised its prices
-			li your direct debit payments have increased
-			li you&rsquo;ve been switched to a new supplier without your consent
+			li #[a(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/problems-with-your-energy-bill/energy-bill-seems-too-high-or-low/") your energy bill seems too high or low]
+			li #[a(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/problems-with-your-energy-bill/your-gas-or-electricity-supplier-has-put-up-its-prices/") your supplier has raised its prices]
+			li #[a(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/problems-with-your-energy-bill/energy-supplier-has-increased-your-direct-debit/") your direct debit payments have increased]
+			li #[a(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/problems-with-your-energy-supply/youve-been-switched-to-a-new-energy-supplier-without-your-agreement/") you&rsquo;ve been switched to a new supplier without your consent]
 		h2#h-how-to-complain.js-ref How to complain
 		p You should follow your supplier&rsquo;s complaints procedure - you&rsquo;ll find this on their website or on your energy bill. Normally you can complain by emailing, phoning or writing to them.
 		p If you want to complain in writing, you can use our template letter to help you:
-		p Example letter: Complain to your energy supplier
+		p #[a(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/complain-about-an-energy-company/letter-to-complain-to-your-energy-supplier/") Example letter: Complain to your energy supplier]
 		p After you submit your complaint, your supplier must tell you exactly how they plan to deal with it and how long it will take. Most complaints should be resolved within 8 weeks.
 		p During this time you should work with your supplier to sort out the problem. For example, they might ask you for more information or want to visit your home to check your meter.
 		.callout--alert
-			p If you were misled or intimidated into signing an energy contract, you should complain to the supplier. You can use our example letter for energy mis-selling to write to them.
+			p If you were misled or intimidated into signing an energy contract, you should complain to the supplier. You can use our #[a(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/complain-about-an-energy-company/letter-to-complain-about-energy-mis-selling/") example letter for energy mis-selling] to write to them.
 		h3#h-keeping-records.js-ref Keeping records
 		p Try to keep a record of any correspondence you have with your supplier. For example, you should keep:
 		ul
@@ -58,77 +58,69 @@ block content
 			li copies of emails
 		p You should also keep a record of when relevant things happened, for example the date your energy was cut off.
 		h2#h-if-you-re-unhappy-with-their-response.js-ref If you&rsquo;re unhappy with their response
-		p The next step you can take is to complain to the energy ombudsman. You can do this if either:
+		p The next step you can take is to #[a(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/complain-about-an-energy-company/complain-to-the-energy-ombudsman/") complain to the energy ombudsman]. You can do this if either:
 		ul
 			li you receive a decision letter (called a &lsquo;letter of deadlock&rsquo;) and you&rsquo;re not happy with it
 			li you don&rsquo;t receive a decision letter within 8 weeks of making your complaint
 		p The ombudsman is independent and will review your complaint further. They might be able to force your supplier to change their decision.
+
+		// New content starts here
 		h2#h-get-help-with-your-complaint.js-ref Get help with your complaint
-		p You can get advice from the #[a(href="https://www.citizensadvice.org.uk/consumer/get-more-help/if-you-need-more-help-about-a-consumer-issue/") Citizens Advice consumer helpline] about how to complain to your supplier.
-		p You can contact the helpline by emailing, phoning or writing to them. Helpline staff might tell you to phone or email your supplier, or they might recommend writing.
+		p You can get advice from the #[a(href="https://www.citizensadvice.org.uk/consumer/get-more-help/if-you-need-more-help-about-a-consumer-issue/") Citizens Advice consumer helpline] about how to complain to your supplier. You can contact the helpline by emailing, phoning or writing to them.
 		p Use our consumer #[a(href="https://www.citizensadvice.org.uk/consumer/template-letters/letters/") template letters] if you want to contact your energy supplier yourself. The templates will help you to write a complaint letter or email.
-		p You can also use the automated Resolver complaint service which:
+		p You can also use the automated Resolver complaint service, which:
 		ul
 			li emails your complaint letter to your energy supplier
 			li uses its database to make sure your complaint reaches the right person
 			li tracks the result and lets you know how your complaint is progressing
 			li resends your complaint letter to someone more senior if necessary
-			li collects all correspondence into a dossier for the energy ombudsman
-		p To complain using Resolver, choose your energy supplier and then follow the instructions on their website. You’ll have to create a profile - give yourself some time to get all the details right.
-
+			li collects your complaint and any response for the energy ombudsman
+		p To complain using Resolver, choose your energy supplier and then follow the instructions on the Resolver website.
+		p You’ll need to create a Resolver account and then add the details of your case using their multiple choice process. This shouldn’t take more than 20 minutes. Make sure you have the paperwork from your energy supplier with you when you start the process.
 		.well--outline
-			label Choose your energy supplier
-			.dropdown
-				select
-					option(value="") Please select
-					option(value="Affect Energy") Affect Energy
-					option(value="Avro Energy") Avro Energy
-					option(value="Bristol Energy") Bristol Energy
-					option(value="British Gas") British Gas
-					option(value="Bulb") Bulb
-					option(value="Co-operative Energy") Co-operative Energy
-					option(value="E") E
-					option(value="E.ON") E.ON
-					option(value="EBICo") EBICo
-					option(value="EDF Energy") EDF Energy
-					option(value="Economy Energy") Economy Energy
-					option(value="Ecotricity") Ecotricity
-					option(value="EnergySW") EnergySW
-					option(value="Extra Energy") Extra Energy
-					option(value="Fairerpower") Fairerpower
-					option(value="First Utility") First Utility
-					option(value="Flow Energy") Flow Energy
-					option(value="Future Energy") Future Energy
-					option(value="GB Energy Supply") GB Energy Supply
-					option(value="Glide") Glide
-					option(value="GnERGY") GnERGY
-					option(value="Go Effortless Energy") Go Effortless Energy
-					option(value="Good Energy") Good Energy
-					option(value="Green Energy (UK) plc") Green Energy (UK) plc
-					option(value="Green Star Energy") Green Star Energy
-					option(value="IRESA Limited") IRESA Limited
-					option(value="iSupplyEnergy") iSupplyEnergy
-					option(value="LoCO2 Energy") LoCO2 Energy
-					option(value="M&amp;S Energy") M&amp;S Energy
-					option(value="npower") npower
-					option(value="OVO Energy") OVO Energy
-					option(value="Octopus Energy") Octopus Energy
-					option(value="Oink Energy") Oink Energy
-					option(value="PFP Energy") PFP Energy
-					option(value="Peterborough Energy") Peterborough Energy
-					option(value="Robin Hood Energy") Robin Hood Energy
-					option(value="SSE") SSE
-					option(value="SSE Atlantic") SSE Atlantic
-					option(value="SSE Scottish Hydro") SSE Scottish Hydro
-					option(value="SSE Southern Electric") SSE Southern Electric
-					option(value="SSE Swalec") SSE Swalec
-					option(value="Sainsbury's Energy") Sainsbury's Energy
-					option(value="ScottishPower") ScottishPower
-					option(value="So Energy") So Energy
-					option(value="Southend Energy") Southend Energy
-					option(value="Spark Energy") Spark Energy
-					option(value="Telecom Plus") Telecom Plus
-					option(value="Tonik Energy") Tonik Energy
-					option(value="Utilita") Utilita
-			button.btn.right-button-icon Complain using Resolver
-			//img.resolver(alt="", src="#{dir}images/logo-resolver.png", width="150")
+			form
+				label Choose your energy supplier
+				.dropdown
+					select#resolver(name="resolver")
+						option(value="") Please select
+						option(value="http://www.resolver.co.uk/freeadvice/services/51966/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Affect Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/51967/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Avro Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/51968/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Better Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/51969/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Bristol Energy
+						option(value="http://www.resolver.co.uk/freeadvice/companies/british-gas-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") British Gas
+						option(value="http://www.resolver.co.uk/freeadvice/services/51970/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Bulb Energy
+						option(value="http://www.resolver.co.uk/freeadvice/companies/co-operative-energy-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Co-option(Operative Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/7416/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Dali Gas
+						option(value="http://www.resolver.co.uk/freeadvice/companies/e-on-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") e.on
+						option(value="http://www.resolver.co.uk/freeadvice/services/192/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Ebico
+						option(value="http://www.resolver.co.uk/freeadvice/companies/ecotricity-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Ecotricity
+						option(value="http://www.resolver.co.uk/freeadvice/services/51971/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") EnergySW
+						option(value="http://www.resolver.co.uk/freeadvice/companies/extra-energy-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Extra Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/51972/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Fairerpower
+						option(value="http://www.resolver.co.uk/freeadvice/companies/first-utility-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") First Utility
+						option(value="http://www.resolver.co.uk/freeadvice/services/51973/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Flow Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/20390/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") GB Energy Supply
+						option(value="http://www.resolver.co.uk/freeadvice/services/51974/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") GnERGY
+						option(value="http://www.resolver.co.uk/freeadvice/services/51975/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Go Effortless Energy
+						option(value="http://www.resolver.co.uk/freeadvice/companies/good-energy-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Good Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/20391/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Green Star Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/51976/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Iresa Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/16242/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") iSupplyEnergy
+						option(value="http://www.resolver.co.uk/freeadvice/services/337/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") LoCO2 Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/357/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") M&S Energy
+						option(value="http://www.resolver.co.uk/freeadvice/companies/npower-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") npower
+						option(value="http://www.resolver.co.uk/freeadvice/services/51978/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Octopus Energy
+						option(value="http://www.resolver.co.uk/freeadvice/companies/ovo-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") OVO Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/51979/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Peterborough Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/51980/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Places for People
+						option(value="http://www.resolver.co.uk/freeadvice/services/51981/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Robinhood Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/468/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Sainsbury Energy
+						option(value="http://www.resolver.co.uk/freeadvice/companies/sse-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") SSE
+						option(value="http://www.resolver.co.uk/freeadvice/companies/scottish-power-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Scottish Power
+						option(value="http://www.resolver.co.uk/freeadvice/services/51982/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") SO Energy
+						option(value="http://www.resolver.co.uk/freeadvice/services/51983/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Southend Energy
+						option(value="http://www.resolver.co.uk/freeadvice/companies/spark-energy-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Spark Energy
+						option(value="http://www.resolver.co.uk/freeadvice/companies/utilita-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") Utilitia
+						option(value="http://www.resolver.co.uk/freeadvice/companies/utility-warehouse-complaints/services?utm_source=CAB&utm_medium=widget&utm_campaign=energy") The Utilityoption( Warehouse
+						option(value="http://www.resolver.co.uk/freeadvice/services/51984/issues?utm_source=CAB&utm_medium=widget&utm_campaign=energy") ZOG Energy
+				button.btn.right-button-icon(type="submit", onClick="window.open(resolver.value,'_blank');return false") Complain using Resolver
