--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -48,7 +48,7 @@ tr {
         border-style: solid;
         border-width: 0 1px 0 0;
         &:last-child {
-            border: none;
+            border-right: none;
         }
     }
     & > th {
