dev: test mailchimp feedback from for blog

--- a/libs/dev/feedback.less
+++ b/libs/dev/feedback.less
@@ -1,13 +1,7 @@
 .footer-feedback {
 	.limit-width;
-    padding: .5rem 0 0 1rem;
+    padding: 0 0 0 1rem;
     text-align: left;
-    border: 0px @gray-7 solid;
-    border-left-width: 0.25rem;
-    @media screen and ( max-width: (@breakpoint-content) ) {
-        padding: .5rem 0 0 1rem;
-        border-left-width: 0;
-    }
 }
 #feedback-form {
 	display: none;
@@ -19,19 +13,24 @@
 		height: 5rem;
 	}
 	#feedback-content {
+        padding: 0 0 0 1rem;
+        border: 0px @gray-7 solid;
+        border-left-width: 0.25rem;
 		text-align: left;
 		margin-bottom: 1rem;
 		.main-content__right;
-	}
-    @media screen and ( max-width: (@breakpoint-content) ) {
-        display: flex;
-        flex-direction: column;
-        margin: 0 9%;
-        padding: 0;
-        padding-top: 1rem;
-    }
-    @media screen and ( max-width: (@breakpoint-sm - 1) ) {
-        margin: 0;
-        padding-top: 1rem;
+        @media screen and ( max-width: (@breakpoint-content) ) {
+            //display: flex;
+            //flex-direction: column;
+            margin: 0 1rem 0 0;
+            padding: 0;
+            border-left-width: 0;
+            padding-top: 1rem;
+        }
+        @media screen and ( max-width: (@breakpoint-sm - 1) ) {
+            margin: 0;
+            border-left-width: 0;
+            padding-top: 1rem;
+        }
     }
 }
