--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -49,107 +49,98 @@ block script
 			$(".complaints").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score >= 0 && score <= 50) {
-					$(this).addClass("rate-5").html(5);
+					$(this).html(5);
 				} else if (score > 50 && score <= 100) {
-					$(this).addClass("rate-4").html(4);
+					$(this).html(4);
 				} else if (score > 100 && score <= 350) {
-					$(this).addClass("rate-3").html(3);
+					$(this).html(3);
 				} else if (score > 350 && score <= 550) {
-					$(this).addClass("rate-2").html(2);
+					$(this).html(2);
 				} else if (score > 550) {
-					$(this).addClass("rate-1").html(1);
+					$(this).html(1);
 				}
 			})
 
 			$(".service").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score > 0 && score <= 49) {
-					$(this).addClass("rate-1").html(1);
+					$(this).html(1);
 				} else if (score > 50 && score <= 59) {
-					$(this).addClass("rate-2").html(2);
+					$(this).html(2);
 				} else if (score > 60 && score <= 69) {
-					$(this).addClass("rate-3").html(3);
+					$(this).html(3);
 				} else if (score > 70 && score <= 74) {
-					$(this).addClass("rate-4").html(4);
+					$(this).html(4);
 				} else if (score > 74) {
-					$(this).addClass("rate-5").html(5);
+					$(this).html(5);
 				}
 			})
 
 			$(".billing").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score > 0 && score <= 49) {
-					$(this).addClass("rate-1").html(1);
+					$(this).html(1);
 				} else if (score > 50 && score <= 59) {
-					$(this).addClass("rate-2").html(2);
+					$(this).html(2);
 				} else if (score > 60 && score <= 69) {
-					$(this).addClass("rate-3").html(3);
+					$(this).html(3);
 				} else if (score > 70 && score <= 74) {
-					$(this).addClass("rate-4").html(4);
+					$(this).html(4);
 				} else if (score > 74) {
-					$(this).addClass("rate-5").html(5);
+					$(this).html(5);
 				}
 			})
 
 			$(".switching").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score > 0 && score <= 49) {
-					$(this).addClass("rate-1").html(1);
+					$(this).html(1);
 				} else if (score > 50 && score <= 74) {
-					$(this).addClass("rate-2").html(2);
+					$(this).html(2);
 				} else if (score > 74 && score <= 94) {
-					$(this).addClass("rate-3").html(3);
+					$(this).html(3);
 				} else if (score > 94 && score <= 99) {
-					$(this).addClass("rate-4").html(4);
+					$(this).html(4);
 				} else if (score >= 100) {
-					$(this).addClass("rate-5").html(5);
+					$(this).html(5);
 				}
 			})
 
 			$(".commitment").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score == 0) {
-					$(this).addClass("rate-1");
+					$(this);
 				} else if (score > 0 && score <= 1) {
-					$(this).addClass("rate-1").html(1);
+					$(this).html(1);
 				} else if (score > 1 && score <= 2) {
-					$(this).addClass("rate-2").html(2);
+					$(this).html(2);
 				} else if (score > 2 && score <= 3) {
-					$(this).addClass("rate-3").html(3);
+					$(this).html(3);
 				} else if (score > 3 && score <= 4) {
-					$(this).addClass("rate-4").html(4);
+					$(this).html(4);
 				} else if (score > 4) {
-					$(this).addClass("rate-5").html(5);
+					$(this).html(5);
 				}
 			})
 
 			$(".rating").each(function() {
-				var score = parseInt($(this).text().trim());
-				if (score > 0 && score < 2) {
-					$(this).find('span').addClass("rate-1--badge");
-				} else if (score > 1 && score < 3) {
-					$(this).find('span').addClass("rate-2--badge");
-				} else if (score > 2 && score < 4) {
-					$(this).find('span').addClass("rate-3--badge");
-				} else if (score > 3 && score < 5) {
-					$(this).find('span').addClass("rate-4--badge");
-				} else if (score > 4 && score < 6) {
-					$(this).find('span').addClass("rate-5--badge");
-				}
-			})
-
-			$(".modern .rating").each(function() {
-				var score = parseInt($(this).text().trim());
-				if (score > 0 && score < 2) {
-					$(this).addClass("rate-1--cell");
-				} else if (score > 1 && score < 3) {
-					$(this).addClass("rate-2--cell");
-				} else if (score > 2 && score < 4) {
-					$(this).addClass("rate-3--cell");
-				} else if (score > 3 && score < 5) {
-					$(this).addClass("rate-4--cell");
-				} else if (score > 4 && score < 6) {
-					$(this).addClass("rate-5--cell");
+				var score = parseFloat($(this).text());
+				if (score > 0 && score <= 1) {
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-10.svg">');
+				} else if (score > 1 && score <= 2) {
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-20.svg">');
+				} else if (score > 2 && score <= 2.5) {
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-25.svg">');
+				} else if (score > 2.5 && score <= 3) {
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-30.svg">');
+				} else if (score > 3 && score <= 3.5) {
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-35.svg">');
+				} else if (score > 3.5 && score <= 4) {
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-40.svg">');
+				} else if (score > 4 && score <= 4.5) {
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-45.svg">');
+				} else if (score > 4.5 && score <= 5) {
+					$(this).append('<br><img style="max-width:6rem;" src="#{dir}/images/rating-50.svg">');
 				}
 			})
 		});
@@ -166,7 +157,7 @@ block content
 		.flex-row
 			.col-md-8
 				p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor dui semper, vulputate magna ut, suscipit eros. Nunc non nunc nec ligula consequat aliquet non eu elit.
-		table.sortable.energy-comparison.modern
+		table.sortable.energy-comparison
 			thead
 				tr
 					th.col-rank.sorttable_numeric(scope="col") Rank
@@ -176,7 +167,7 @@ block content
 					th.lg-only(scope="col") Billing satisfaction
 					th.lg-only(scope="col") Switching
 					th.lg-only(scope="col") Customer commitment
-					th.col-rate(scope="col") Rating
+					th.col-rate(scope="col") Rating of 5
 			tbody
 				tr.open-dialog1
 					td.increase
@@ -187,8 +178,8 @@ block content
 					td.billing 53.78%
 					td.switching 80.94%
 					td.commitment 4
-					td.rating
-						span 3
+					//td.rating 3
+					td.rating 4.5
 				tr.open-dialog1
 					td.increase
 						span.inline-badge 2
@@ -198,8 +189,8 @@ block content
 					td.billing 56.8%
 					td.switching 100%
 					td.commitment 4
-					td.rating
-						span 3.25
+					//td.rating 3.25
+					td.rating 4
 				tr.open-dialog1
 					td.decrease
 						span.inline-badge 3
@@ -209,8 +200,8 @@ block content
 					td.billing 82.34%
 					td.switching 74.68%
 					td.commitment 5
-					td.rating
-						span 4
+					//td.rating 4
+					td.rating 3
 				tr.open-dialog1
 					td
 						span.inline-badge 4
@@ -220,8 +211,8 @@ block content
 					td.billing 57.86%
 					td.switching 91.35%
 					td.commitment 0
-					td.rating
-						span 3
+					//td.rating 3
+					td.rating 2
 				tr.open-dialog1
 					td.decrease
 						span.inline-badge 5
@@ -231,8 +222,8 @@ block content
 					td.billing 74.67%
 					td.switching 100%
 					td.commitment 4
-					td.rating
-						span 3.5
+					//td.rating 3.5
+					td.rating 1
 				tr.open-dialog1
 					td.increase
 						span.inline-badge 6
@@ -242,8 +233,7 @@ block content
 					td.billing 45.67%
 					td.switching 60.54%
 					td.commitment 5
-					td.rating
-						span 2.25
+					td.rating 2.25
 				tr.open-dialog1
 					td.decrease
 						span.inline-badge 7
@@ -253,8 +243,7 @@ block content
 					td.billing 49.87%
 					td.switching 96.8%
 					td.commitment 0
-					td.rating
-						span 2.5
+					td.rating 2.5
 				tr.open-dialog1
 					td.decrease
 						span.inline-badge 8
@@ -264,8 +253,7 @@ block content
 					td.billing 45.67%
 					td.switching 77.56%
 					td.commitment 4
-					td.rating
-						span 2.75
+					td.rating 2.75
 				tr.open-dialog1
 					td.decrease
 						span.inline-badge 9
@@ -275,8 +263,7 @@ block content
 					td.billing 23.47%
 					td.switching 98.7%
 					td.commitment 0
-					td.rating
-						span 2
+					td.rating 2
 				tr.open-dialog1
 					td.decrease
 						span.inline-badge 10
@@ -286,8 +273,7 @@ block content
 					td.billing 61.2%
 					td.switching 58.97%
 					td.commitment 0
-					td.rating
-						span 2.25
+					td.rating 2.25
 				tr.open-dialog1
 					td.increase
 						span.inline-badge 11
@@ -297,8 +283,7 @@ block content
 					td.billing 61.5%
 					td.switching 96.34%
 					td.commitment 4
-					td.rating
-						span 3.25
+					td.rating 3.25
 				tr.open-dialog1
 					td.increase
 						span.inline-badge 12
@@ -308,8 +293,7 @@ block content
 					td.billing 25.67%
 					td.switching 54.23%
 					td.commitment 4
-					td.rating
-						span 3.5
+					td.rating 3.5
 				tr.open-dialog1
 					td.decrease
 						span.inline-badge 13
@@ -319,8 +303,7 @@ block content
 					td.billing 72.3%
 					td.switching 97.89%
 					td.commitment 0
-					td.rating
-						span 2.5
+					td.rating 2.5
 				tr.open-dialog1
 					td.increase
 						span.inline-badge 14
@@ -330,8 +313,7 @@ block content
 					td.billing 51.64%
 					td.switching 97.4%
 					td.commitment 0
-					td.rating
-						span 2.5
+					td.rating 2.5
 				tr.open-dialog1
 					td.decrease
 						span.inline-badge 15
@@ -341,8 +323,7 @@ block content
 					td.billing 80.67%
 					td.switching 82.34%
 					td.commitment 4
-					td.rating
-						span 2.75
+					td.rating 2.75
 				tr.open-dialog1
 					td.increase
 						span.inline-badge 16
@@ -352,8 +333,7 @@ block content
 					td.billing 67.56%
 					td.switching 40.21%
 					td.commitment 0
-					td.rating
-						span 3.25
+					td.rating 3.25
 				tr.open-dialog1
 					td
 						span.inline-badge 17
@@ -363,8 +343,7 @@ block content
 					td.billing 76.45%
 					td.switching 30.45%
 					td.commitment 0
-					td.rating
-						span 2.75
+					td.rating 2.75
 				tr.open-dialog2
 					td(sorttable_customkey="99") -
 					td Supplier R
