dev: add new site design search feedback example

--- a/libs/jade/dev/site/search-feedback.jade
+++ b/libs/jade/dev/site/search-feedback.jade
@@ -121,7 +121,7 @@ block content
 					li #[a Next]
 
 			h2.screenreader Feedback
-			p Are the search results what you expected? #[a#feedback-link Give us feedback].
+			p Are these search results not what you expected? #[a#feedback-link Give us feedback].
 			#feedback-form
 				#feedback-content(style="width:100%;")
 					.fieldset
