dev:change: Changeing the energy-rating to look more like a badge

--- a/libs/dev/energy-comparison.less
+++ b/libs/dev/energy-comparison.less
@@ -106,22 +106,27 @@
 
 .ca-energy_rating {
     display: block;
-    width: 150px;
+    width: 158px;
+    padding: 8px;
+    background-color: @white;
+    border: 2px solid @heritage-blue-lighter;
+    border-radius: .5rem;
+    font-size: 14px;
+    font-weight: bold;
+    color: @heritage-blue;
     .logo {
         display: inline-block;
         img {
             border: none;
-            max-height: 48px;
+            max-height: 42px;
             vertical-align: bottom;
         }
     }
     .text {
         display: inline-block;
-        color: @heritage-blue;
-        font-weight: @font-weight-bold;
         img {
             border: none;
-            max-width: 96px;
+            max-width: 80px;
         }
         .of {
             color: @gray-3;
