--- a/libs/jade/branding/energy-rating.jade
+++ b/libs/jade/branding/energy-rating.jade
@@ -25,9 +25,10 @@ block content
 					.logo
 						img(src="#{dir}images/ca-logo_100px.svg")
 					.text
-						| 5 #[span.of out of 5]
+						| 4.75 #[span.of out of 5]
 						br
 						img(src="#{dir}images/rating-50.svg")
+					//| Performance rating
 
 			pre
 				code.language-html
