--- a/libs/jade/dev/feedback/feedback-adviser.jade
+++ b/libs/jade/dev/feedback/feedback-adviser.jade
@@ -22,8 +22,11 @@ block script
 			$('#feedback-form').slideToggle('fast');
 		})
 		$('#send').on('click', function(){
-			$('#feedback-content').hide();
-			$('#feedback-confirmation').show();
+			$('#feedback-content').slideUp({
+				complete: function(){
+					$('#feedback-confirmation').slideDown('fast');
+				}
+			});
 		})
 
 block feedback
@@ -31,20 +34,17 @@ block feedback
 	p Is there anything wrong with this page? #[a#feedback-link Let us know].
 	#feedback-form
 		#feedback-content
-			p Don’t include personal or financial information, eg National Insurance number or credit card details.
+			p Don’t include any personal or financial information such as National Insurance number or credit card details in your entry.
 			.fieldset
-				label(for="wrong") What went wrong?
+				label(for="wrong") What’s wrong with this page?
 				textarea#wrong
-			.fieldset
-				label(for="doing") What were you expecting?
-				textarea#doing
 			.fieldset
 				label(for="email") Your email
 					span.optional &nbsp;(optional)
 				input#email(placeholder="", type="text")
 			a#send.btn Send
-		#feedback-confirmation.main-content__right(style="text-align:left;margin-bottom:1rem;display:none")
-			p Thank you for your feedback. We will review your message in the next 48 hours.
+		#feedback-confirmation
+			p Thank you for your feedback. We’ll review your message, and get back to you if we have any questions
 
 block content
 	.articleContent
